kubernetes/files/grafana-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-np
  labels:
    managed-by: setup-cluster.sh
spec:
  podSelector:
    matchLabels:
      app: grafana
  policyTypes: [Ingress]

  # Allow access to the UI from any node in the cluster (for the NodePort
  # service)
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 3000
