kubernetes/files/jaeger-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jaeger-operator-np
  labels:
    managed-by: setup-cluster.sh
spec:
  podSelector:
    matchLabels:
      app: jaeger-operator
  policyTypes: [Ingress, Egress]

  ingress:
    # Allow Prometheus to scrape metrics
    # NB: Istio is merging the main container metrics with the side-car proxy
    #     metrics, and make them available on port 15020.
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - port: 15020

  egress:
    # Allow the Jaeger operator to query the Kubernetes API
    - ports:
        - port: 8443
        - port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jaeger-np
  labels:
    managed-by: setup-cluster.sh
spec:
  podSelector:
    matchLabels:
      app: jaeger
  policyTypes: [Ingress, Egress]

  ingress:
    # Allow Prometheus to scrape metrics
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - port: 14269

    # Allow other pods in any namespace to post traces
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              generate-traces: "true"
      ports:
        # Zipkin trift is deprecated for Jaeger; it's still supported if required
        #- # agent: zk-compact-trft
        #  protocol: UDP
        #  port: 5775
        - # agent: config-rest
          protocol: TCP
          port: 5778
        - # agent: jg-compact-trft
          protocol: UDP
          port: 6831
        - # agent: jg-binary-trft
          protocol: UDP
          port: 6832
        #- # collector: zipkin endpoint - optional
        #  protocol: TCP
        #  port: 9411
        - # collector: grpc
          protocol: TCP
          port: 14250
        - # collector: c-tchan-trft
          protocol: TCP
          port: 14627
        - # collector: c-binary-trft
          protocol: TCP
          port: 14268
        - # collector: admin-http
          protocol: TCP
          port: 14269
        - # query
          protocol: TCP
          port: 16686
