kubernetes/files/kiali-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kiali-np
  labels:
    managed-by: setup-cluster.sh
spec:
  podSelector:
    matchLabels:
      app: kiali
  policyTypes: [Ingress, Egress]

  ingress:
    # Allow Prometheus to scrape metrics
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - port: 15020

    # Allow access to the UI
    - ports:
        - port: 20001

  egress:
    # Allow Kiali to query the Kubernetes API
    - ports:
        - port: 8443
        - port: 443
