kubernetes/files/promtail-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: promtail-np
  labels:
    managed-by: setup-cluster.sh
spec:
  podSelector:
    matchLabels:
      app: promtail
  policyTypes: [Ingress, Egress]

  ingress:
    # Allow Prometheus to scrape metrics
    # NB: Istio is merging the main container metrics with the side-car proxy
    #     metrics, and make them available on port 15020.
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - port: 15020

  egress:
    # Allow Promtail to query the Kubernetes API
    - to:
        # Allow traffic to usual Kubernetes IP ranges
        - ipBlock: {cidr: 10.0.0.0/8}
        - ipBlock: {cidr: 192.168.0.0/16}
      ports:
        - port: 8443
        - port: 443
